<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/picton_blue">
    <TextView
        android:id="@+id/headerVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="40dp"
        />
    <TextView
        android:id="@+id/descVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/headerVerify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/verifyDesc"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="16dp"
        />
    <EditText
        android:id="@+id/inputVerify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/descVerify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/white"
        android:hint="@string/verifyInput"
        android:textColorHint="@color/white"
        android:textSize="16dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:paddingBottom="18dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/inputVerify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/picton_blue"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"
        android:text="@string/btnVerify"
        android:textSize="16dp"

        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />
    <TextView
        android:id="@+id/resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/verifyResend"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="16dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>