<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/picton_blue"
    >
    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_110dp"
        android:layout_height="@dimen/_110dp"
        android:layout_marginTop="@dimen/_135dp"
        android:src="@drawable/ic_welcome_logo"
        android:contentDescription="logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/white"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:paddingBottom="@dimen/_18dp"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/white"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingBottom="@dimen/_18dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/picton_blue"
        app:strokeColor="@color/white"
        app:strokeWidth="@dimen/_1dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:paddingTop="@dimen/_10dp"
        android:paddingBottom="@dimen/_10dp"
        />
    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="16sp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFacebook"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/picton_blue"
        app:strokeColor="@color/white"
        app:strokeWidth="@dimen/_1dp"
        android:text="@string/facebook"
        android:textSize="16sp"
        app:icon="@drawable/ic_welcome_fb_login"
        app:iconGravity="textStart"
        android:paddingTop="@dimen/_10dp"
        android:paddingBottom="@dimen/_10dp"
        />
    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/btnFacebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/lregister"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="16sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>