<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/picton_blue">

    <TextView
        android:id="@+id/almostThere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/almost_there"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_200dp"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:text="@string/almostDesc"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="12sp"
        android:textAppearance="@style/TextAppearance.Roboto.Light.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/almostThere"
        android:layout_marginTop="@dimen/_10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:backgroundTint="@color/picton_blue"
        android:padding="@dimen/_16dp"
        android:layout_marginTop="@dimen/_50dp"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>